# llm-mrchatterbox

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
llm_mrchatterbox/: __init__.py  tokenizer.json
llm_mrchatterbox/nanochat/: checkpoint_manager.py  common.py  engine.py  flash_attention.py  gpt.py  optim.py  tokenizer.py
tests/: test_mrchatterbox.py
